// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`analyzeWordV1 gold words v1 matches snapshot for 'damage' (v1.0.0) 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "damage",
      ],
      "form": "damage",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "A",
        "A",
        "E",
      ],
    },
  ],
  "decision_geometry": null,
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: outer",
        "strong imbalance between rings",
      ],
      "score": 0.33333333333333337,
    },
    "dominantVoices": [
      "A",
    ],
    "path": [
      "A",
      "A",
      "E",
    ],
    "rings": {
      "inner": [],
      "mediator": null,
      "middle": [
        "E",
      ],
      "outer": [
        "A",
        "A",
      ],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 3,
    "vector": {
      "A": 2,
      "E": 1,
      "I": 0,
      "O": 0,
      "U": 0,
      "Y": 0,
      "Ë": 0,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "A",
      "label": "Inward move",
      "normalized": "A → A → E",
      "polarity": "centripetal",
      "raw": "A → A → E",
      "ringDelta": -1,
      "ringFrom": 3,
      "ringTo": 2,
      "steps": 2,
      "summary": "Moves centripetal from ring 3 to ring 2 (A → E).",
      "to": "E",
      "voices": [
        "A",
        "A",
        "E",
      ],
    },
    "ui": {
      "label": "Inward move",
      "summary": "Moves centripetal from ring 3 to ring 2 (A → E).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "A → A → E",
    },
    "voicePath": "A → A → E",
    "voicePathRaw": "A → A → E",
    "voices": [
      "A",
      "A",
      "E",
    ],
    "word": "damage",
  },
  "word": "damage",
}
`;

exports[`analyzeWordV1 gold words v1 matches snapshot for 'study' (v1.0.0) 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "study",
      ],
      "form": "study",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "U",
        "Y",
      ],
    },
  ],
  "decision_geometry": null,
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: inner",
        "strong imbalance between rings",
      ],
      "score": 0.33333333333333326,
    },
    "dominantVoices": [
      "U",
      "Y",
    ],
    "path": [
      "U",
      "Y",
    ],
    "rings": {
      "inner": [
        "U",
      ],
      "mediator": null,
      "middle": [
        "Y",
      ],
      "outer": [],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 2,
    "vector": {
      "A": 0,
      "E": 0,
      "I": 0,
      "O": 0,
      "U": 1,
      "Y": 1,
      "Ë": 0,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "U",
      "label": "Outward move",
      "normalized": "U → Y",
      "polarity": "centrifugal",
      "raw": "U → Y",
      "ringDelta": 1,
      "ringFrom": 1,
      "ringTo": 2,
      "steps": 1,
      "summary": "Moves centrifugal from ring 1 to ring 2 (U → Y).",
      "to": "Y",
      "voices": [
        "U",
        "Y",
      ],
    },
    "ui": {
      "label": "Outward move",
      "summary": "Moves centrifugal from ring 1 to ring 2 (U → Y).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "U → Y",
    },
    "voicePath": "U → Y",
    "voicePathRaw": "U → Y",
    "voices": [
      "U",
      "Y",
    ],
    "word": "study",
  },
  "word": "study",
}
`;
